# novanet

./: .claudeignore  .gitignore  .gitmodules  .mcp.json  CHANGELOG-LATEST.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ECOSYSTEM.md  ICON_TEST_COVERAGE_REPORT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SEO_KEYWORD_AUDIT_REPORT.md  VERSION_MATRIX.md  VISION.md  book.toml  cliff.toml  commitlint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  turbo.json
tools/: CHANGELOG.md  Cargo.toml
tools/novanet/: CLAUDE.md  Cargo.toml  KEYBINDINGS.md  Makefile.toml  TUI_CONTEXT_v10.9.0.md  asian-locales-cultural-research.json  bacon.toml  cliff.toml  deny.toml  fil-ph-cultural-data.json  fr-be-cultural-data.json  lo-la-cultural-data.json  locale_cultural_data_other.json  missing-locales-cultural-data.json  or-in-cultural-data.json  romance-locales-cultural-data.json  rustfmt.toml
tools/novanet-mcp/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MCP_GUIDE.md  deny.toml
tools/novanet-mcp/.claude/: settings.local.json.example
tools/novanet-mcp/benches/: mcp_benchmarks.rs
tools/novanet-mcp/docs/: DX-AUDIT-PLAN.md  novanet-write.md
tools/novanet-mcp/docs/history/: DX-AUDIT-PLAN.md  MCP_GUIDE.md
tools/novanet-mcp/docs/history/plans/: 2026-02-12-phase3-generate-prompts-design.md  2026-03-03-novanet-write-quality-fixes.md  2026-03-06-performance-optimization-plan.md
tools/novanet-mcp/docs/plans/: 2026-02-12-phase3-generate-prompts-design.md  2026-02-12-phase4-integration-plan.md  2026-03-03-novanet-write.md
tools/novanet-mcp/scripts/: validate-mcp.sh
tools/novanet-mcp/src/: error.rs  hints.rs  lib.rs  main.rs  metrics.rs  schema_cache.rs  validation.rs
tools/novanet-mcp/src/activation/: mod.rs  spreading.rs
tools/novanet-mcp/src/cache/: mod.rs
tools/novanet-mcp/src/context/: mod.rs  spreading.rs
tools/novanet-mcp/src/neo4j/: circuit_breaker.rs  cypher_guard.rs  mod.rs  pool.rs
tools/novanet-mcp/src/prompts/: mod.rs
tools/novanet-mcp/src/resources/: mod.rs
tools/novanet-mcp/src/rlm/: mod.rs
tools/novanet-mcp/src/server/: config.rs  handler.rs  mod.rs  state.rs
tools/novanet-mcp/src/tokens/: counter.rs  mod.rs
tools/novanet-mcp/src/tools/: assemble.rs  atoms.rs  batch.rs  cache_stats.rs  context.rs  describe.rs  generate.rs  introspect.rs  mod.rs  query.rs  search.rs  traverse.rs  write.rs
tools/novanet-mcp/src/tools/auditor/: mod.rs  queries.rs  types.rs
tools/novanet-mcp/src/tools/checker/: mod.rs  types.rs  validation.rs
tools/novanet-mcp/src/tools/context/: helpers.rs  mod.rs  types.rs
tools/novanet-mcp/src/tools/write/: mod.rs  operations.rs  types.rs  validation.rs
tools/novanet-mcp/tests/: config_test.rs  e2e_agent_scenarios.rs  error_test.rs  integration_tests.rs  native_of_arc_tests.rs  state_test.rs  tools_edge_cases_test.rs
tools/novanet/.cargo/: config.toml
tools/novanet/.config/: nextest.toml
tools/novanet/docs/: nexus-game-design.md
tools/novanet/docs/nexus/: 00-research-summary.md  01-game-design.md  02-visual-effects.md  03-implementation-plan.md  04-game-flow.mmd
tools/novanet/docs/plans/: 2026-02-19-properties-improvements.md  2026-02-27-app-refactoring-plan.md  2026-02-27-tui-fixes-plan.md  entity-race-condition-fix.md  source-panel-redesign.md  tui-entity-redesign-plan.md
tools/novanet/docs/research/: gamified-terminal-ux.md  ratatui-best-practices-2025.md
tools/novanet/examples/: tui_diag.rs
tools/novanet/scripts/: pre-commit  pre-commit.sh
tools/novanet/src/: config.rs  cypher.rs  db.rs  error.rs  facets.rs  lib.rs  main.rs  output.rs  user_config.rs
tools/novanet/src/blueprint/: ascii.rs  mod.rs  sources.rs  validation.rs
tools/novanet/src/blueprint/views/: arcs.rs  cardinality.rs  default.rs  flow.rs  glossary.rs  mod.rs  stats.rs  tree.rs
tools/novanet/src/coherence/: drift.rs  generator.rs  mod.rs  type_map.rs  validator.rs
tools/novanet/src/commands/: arc.rs  backup.rs  blueprint.rs  completions.rs  data_backup.rs  data_common.rs  data_diff.rs  data_export.rs  data_promote.rs  data_status.rs  db.rs  diff.rs  doc.rs  doctor.rs  entity.rs  export.rs  filter.rs  init.rs  knowledge.rs  locale.rs  mod.rs  node.rs  read.rs  relation.rs  schema.rs  search.rs  seed.rs  stats.rs  views.rs
tools/novanet/src/core/: checkpoint.rs  mod.rs  ux.rs
tools/novanet/src/core/backup/: archive.rs  mod.rs  service.rs  types.rs
tools/novanet/src/generators/: arc_class.rs  arc_kind.rs  arc_schema.rs  autowire.rs  colors.rs  culture.rs  cypher_utils.rs  edge_schema.rs  expression.rs  formatting.rs  hierarchy.rs  icons.rs  kind.rs  layer.rs  macros.rs  market.rs  mermaid.rs  mod.rs  node_class.rs  node_kind.rs  organizing.rs  slugification.rs  test_utils.rs  tui_colors.rs  tui_icons.rs  view_mermaid.rs  views.rs  visual_encoding.rs
tools/novanet/src/generators/snapshots/: novanet__generators__arc_class__tests__snapshot_minimal_arcs.snap  (+8 more)
tools/novanet/src/parsers/: adaptation.rs  arc_family.rs  arcs.rs  culture.rs  expression.rs  formatting.rs  layer.rs  markdown_utils.rs  market.rs  mod.rs  organizing.rs  realm.rs  relations.rs  schema_rules.rs  slugification.rs  taxonomy.rs  trait_def.rs  utils.rs  views.rs  visual_encoding.rs  yaml_node.rs
tools/novanet/src/parsers/locale_rules/: adaptation.rs  (+4 more)
tools/novanet/src/retrieval/: engine.rs  meta.rs  mod.rs  planner.rs  types.rs
tools/novanet/src/tui/: app.rs  audit.rs  boot.rs  cache.rs  clipboard.rs  color_mode.rs  colors.generated.rs  dashboard.rs  data.rs  detail.rs  dialogs.rs  effects.rs  events.rs  flow.rs  hex_colors.rs  icons.rs  logo.rs  mod.rs  onboarding.rs  palette.rs  runtime.rs  schema.rs  search.rs  testing.rs  theme.rs  tree.rs  ui.rs  unicode.rs  unified_types.rs  yaml.rs
tools/novanet/src/validation/: cypher_validator.rs  mod.rs
tools/scripts/: doc-audit.sh  migrate-schema-format.sh  release-notes.sh  skill-audit.sh  split-relations.mjs  split-relations.py  validate-design-system.mjs  validate-unified-colors.mjs  validate-views.sh  verify-design-system.sh
tools/scripts/lib/: audit-common.sh
(+1282 files in other folders)
