# NovaNet Tools Workspace
#
# This workspace contains Rust binaries for NovaNet:
# - novanet: CLI + TUI for schema management and graph exploration
#
# NOTE: novanet-mcp is a STANDALONE CRATE (not in workspace)
# This allows independent versioning and frequent updates.

[workspace]
resolver = "2"
members = ["novanet"]

[workspace.package]
edition = "2024"
license = "LicenseRef-Proprietary"
rust-version = "1.86"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# Neo4j
neo4rs = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tokio-test = "0.4"

# ─────────────────────────────────────────────────────────────────────────────
# Profiles (must be at workspace root, ignored in member crates)
# ─────────────────────────────────────────────────────────────────────────────

[profile.release]
strip = true                  # Strip symbols (smaller binary)
lto = "thin"                  # Link-time optimization
codegen-units = 1             # Better optimization
opt-level = 3

[profile.dev.package."*"]
opt-level = 2                 # Optimize deps in dev mode (faster builds)
