# NovaNet MCP Server
#
# MCP (Model Context Protocol) server that exposes the NovaNet knowledge graph
# to AI agents. Implements RLM-on-KG (Recursive Language Model on Knowledge Graph)
# patterns for efficient context assembly.
#
# Architecture (v0.20.0 — The Great Cleanup):
# - 8 Tools: query, describe, search, introspect, context, write, audit, batch
# - 4 Resources: entity://, class://, locale://, view://
# - 6 Prompts: cypher_query, cypher_explain, block_generation, page_generation, entity_analysis, locale_briefing
#
# VERSIONING: Aligned with NovaNet monorepo (reset from 0.6.0 to 0.15.1)
# Context7 Verified: 2026-03-03

[package]
name = "novanet-mcp"
version = "0.20.0"
edition = "2024"
license = "LicenseRef-Proprietary"
rust-version = "1.86"
description = "NovaNet MCP Server - Knowledge Graph for AI Agents"
authors = ["SuperNovae Studio"]
repository = "https://github.com/supernovae-st/novanet-hq"
keywords = ["mcp", "knowledge-graph", "neo4j", "ai-agents"]
categories = ["development-tools", "database"]

[dependencies]
# ═══════════════════════════════════════════════════════════════════════════════
# MCP Protocol - Official Anthropic SDK
# v0.16: Compatible with Nika's rmcp client (0.16)
# NOTE: Downgraded from 1.1 for protocol compatibility - Nika uses rmcp 0.16
# ═══════════════════════════════════════════════════════════════════════════════
rmcp = { version = "0.16", features = ["server", "transport-io"] }

# ═══════════════════════════════════════════════════════════════════════════════
# Async Runtime
# ═══════════════════════════════════════════════════════════════════════════════
tokio = { version = "1.50", features = ["full"] }

# ═══════════════════════════════════════════════════════════════════════════════
# Neo4j Driver
# v0.8 supports direct serde deserialization: let entity: Entity = row.get("e")?;
# ═══════════════════════════════════════════════════════════════════════════════
neo4rs = "0.8"

# ═══════════════════════════════════════════════════════════════════════════════
# Caching
# moka v0.12.13 provides high-performance concurrent cache with TTL
# Pattern: Cache::builder().time_to_live(Duration::from_secs(300)).build()
# ═══════════════════════════════════════════════════════════════════════════════
moka = { version = "0.12", features = ["future", "sync"] }

# ═══════════════════════════════════════════════════════════════════════════════
# Token Counting (Hybrid Strategy)
# v0.9.1 with singleton pattern: cl100k_base_singleton() for single BPE instance
# Use exact count for budget enforcement, estimate for pre-flight checks
# ═══════════════════════════════════════════════════════════════════════════════
tiktoken-rs = "0.9"

# ═══════════════════════════════════════════════════════════════════════════════
# Serialization
# ═══════════════════════════════════════════════════════════════════════════════
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"  # YAML parsing for spreading-activation.yaml (serde_yml is unmaintained)
schemars = "1"  # JSON Schema generation for MCP tool params (rmcp requires 1.x)

# ═══════════════════════════════════════════════════════════════════════════════
# Error Handling
# ═══════════════════════════════════════════════════════════════════════════════
thiserror = "2"
anyhow = "1"

# ═══════════════════════════════════════════════════════════════════════════════
# Logging & Tracing
# ═══════════════════════════════════════════════════════════════════════════════
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ═══════════════════════════════════════════════════════════════════════════════
# Configuration
# ═══════════════════════════════════════════════════════════════════════════════
dotenvy = "0.15"

# ═══════════════════════════════════════════════════════════════════════════════
# Concurrency
# parking_lot 0.12: 1.5-5x faster Mutex/RwLock than std
# futures 0.3: Stream combinators for parallel batch execution
# ═══════════════════════════════════════════════════════════════════════════════
parking_lot = "0.12"
futures = "0.3"

# ═══════════════════════════════════════════════════════════════════════════════
# Fast Hashing
# ahash 0.8: ~30% faster than SipHash for string keys (cache key generation)
# ═══════════════════════════════════════════════════════════════════════════════
ahash = "0.8"

# ═══════════════════════════════════════════════════════════════════════════════
# Validation
# once_cell 1.19: Lazy static initialization for compiled regex
# regex 1.10: Input validation to prevent Cypher injection
# ═══════════════════════════════════════════════════════════════════════════════
once_cell = "1.19"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }
criterion = { version = "0.8", features = ["html_reports"] }

# ═══════════════════════════════════════════════════════════════════════════════
# Release Profile - Optimized for production
# ═══════════════════════════════════════════════════════════════════════════════
[profile.release]
strip = true          # Strip symbols for smaller binary
lto = "thin"          # Link-time optimization (balance speed/size)
codegen-units = 1     # Single codegen unit for better optimization
opt-level = 3         # Maximum optimization

# Optional: mimalloc for 30% faster allocations
# Uncomment for production builds on Linux/macOS
# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# mimalloc = { version = "0.1", default-features = false }

[[bin]]
name = "novanet-mcp"
path = "src/main.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# Benchmarks
# Run with: cargo bench
# ═══════════════════════════════════════════════════════════════════════════════
[[bench]]
name = "mcp_benchmarks"
harness = false

# ═══════════════════════════════════════════════════════════════════════════════
# STANDALONE CRATE: Empty workspace table prevents parent workspace detection
# ═══════════════════════════════════════════════════════════════════════════════
[workspace]
