[package]
name = "novanet"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"  # Minimum supported (ratatui 0.30 requires 1.86+)
description = "NovaNet context graph CLI + TUI"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI (feature-gated)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }

# TUI extras (Phase 7B)
tui-big-text = { version = "0.8", optional = true }
tui-popup = { version = "0.7", optional = true }
tui-scrollview = { version = "0.6", optional = true }
dirs = { version = "5", optional = true }
unicode-width = "0.2"

# Async
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"            # CancellationToken for graceful shutdown
futures = "0.3"               # StreamExt for crossterm EventStream

# Neo4j
neo4rs = "0.8"                # Pin minor: breaking changes between 0.x

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"          # serde_yaml is deprecated — serde_yml is the maintained fork

# Template engine
minijinja = "2"               # 1 dep, better errors than tera (15+ deps), by Armin Ronacher

# Output
tabled = "0.17"
indicatif = "0.17"            # Progress bars for long operations

# Search
nucleo = "0.5"                # Fuzzy search (TUI / key)
nucleo-matcher = "0.3"        # Low-level fuzzy matcher (search overlay)

# Graph
petgraph = "0.7"              # In-memory graph for generator dependency ordering
rayon = "1.10"                # Parallel YAML processing
walkdir = "2"                 # Recursive YAML file discovery

# Error handling
thiserror = "2"               # Library-style errors (NovaNetError enum)
color-eyre = "0.6"            # Rich error reports with context

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-big-text", "dep:tui-popup", "dep:tui-scrollview", "dep:dirs"]

[dev-dependencies]
assert_cmd = "2"              # CLI integration tests (binary invocation)
predicates = "3"              # Output assertion matchers
insta = { version = "1", features = ["yaml"] }  # Snapshot testing
tokio-test = "0.4"            # Async test utilities

[profile.release]
strip = true                  # Strip symbols (smaller binary)
lto = "thin"                  # Link-time optimization
codegen-units = 1             # Better optimization
opt-level = 3

[profile.dev.package."*"]
opt-level = 2                 # Optimize deps in dev mode (faster builds)
